--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="w-100 w-50-l pr2-l pl2-ns mb4 mb0-l mb4 ba b1 bw1 ">
      <div class="pa4">
        <form id="location-search" class="pa4">
-         <h1 class="code f4 f2-l fw7 mt0 pv3-l bb-l bb--black">forecast for_<input type="text" id="area" value="Honduras" class="flex-auto"></h1>
+         <h1 class="code f4 f2-l fw7 mt0 pv3-l bb-l bb--black">forecast for_<input type="text" id="area" value="Los Angeles" class="flex-auto"></h1>
              </form>
        <p class="lh-copy mt2 mt3-m mt5-l f6">
          <span class="code grow bg-black-90 lh-copy white db-ns f6 fw7 mb3 mb0-m mb4-l">forecast in detail:</span>
